# StoreRader

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.css  (+4 more)
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: get_env.rs  lib.rs  load_env.rs  main.rs  main_axum.rs
src-tauri/src/auth/: create_jwt.rs  handler.rs  jwt.rs  mod.rs  service.rs  verify.rs
src-tauri/src/auth/dto/: mod.rs  req.rs  res.rs
src-tauri/src/commands/: auth.rs  env.rs  mod.rs
src-tauri/src/common/: mod.rs
src-tauri/src/common/entity/: entity_good.rs  entity_price.rs  entity_price_change.rs  entity_region.rs  entity_store.rs  entity_user.rs  entity_user_preference.rs  entity_user_selection_log.rs  mod.rs
src-tauri/src/common/repository/: mod.rs  repository_good.rs  repository_join.rs  repository_preference.rs  repository_price.rs  repository_region.rs  repository_store.rs  repository_user.rs  repository_user_preference.rs  repository_user_selection_log.rs  repostiory_price_change.rs
src-tauri/src/config/: database.rs  env.rs  mod.rs
src-tauri/src/db/: connect.rs  mod.rs  users.rs  warmup.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/entity/: good_entity.rs  mod.rs  store_entity.rs  user.rs  user_entity.rs
src-tauri/src/oauth/: google.rs
src-tauri/src/repository/: good_repository.rs  goods.rs  mod.rs  store_repository.rs  user.rs  user_repository.rs
src-tauri/src/routes/: auth.rs  protected.rs
src-tauri/src/server/: main_axum.rs
(+178 files in other folders)
