[package]
name = "storerader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "storerader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# 직렬화 및 비직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 구글 로그인
tauri-plugin-google-auth = "=0.3.3"

# 데이터베이스 연결
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# 환경변수 로드
dotenvy = "0.15.7"

# 에러 핸들링
tracing = "0.1.41"

# 날짜 및 시간 관리
chrono = { version = "0.4", features = ["serde"] }

# 비동기 런타임
tokio = { version = "1.47.1", features = ["full"] }

# JWT
jsonwebtoken = { version = "9.3.1" }

reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22.1"
